##  Copyright  1996-1999  Ossama Othman
##
##  All Rights Reserved
##
##  This library is free software; you can redistribute it and/or
##  modify it under the terms of the GNU Library General Public
##  License as published by the Free Software Foundation; either
##  version 2 of the License, or (at your option) any later version.
##
##  This library is distributed in the hope that it will be useful,
##  but WITHOUT ANY WARRANTY; without even the implied warranty of
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
##  Library General Public License for more details.
##
##  You should have received a copy of the GNU Library General Public
##  License along with this library; if not, write to the Free
##  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

##  $Id: Makefile.am,v 1.5 2004/10/13 09:53:35 othman Exp $

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = MaRC

DIST_SUBDIRS = MaRC
