## Copyright (C) 1996-1998, 2004, 2017  Ossama Othman
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License along
## with this program; if not, write to the Free Software Foundation, Inc.,
## 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

##  Process this file with automake to create Makefile.in


#LEXLIB  = @LEXLIB@

#DISTCLEANFILES = stamp-v version.cpp ##lexer.cpp parse.{cc,h}

include $(top_srcdir)/aminclude_static.am

AM_CPPFLAGS =           \
  -I$(top_builddir)/lib \
  -I$(top_srcdir)/lib   \
  $(CODE_COVERAGE_CPPFLAGS)

bin_PROGRAMS = marc

AM_YFLAGS = -d

marc_SOURCES = \
  ProgressConsole.cpp \
  ImageFactory.cpp \
  MuImageFactory.cpp \
  Mu0ImageFactory.cpp \
  CosPhaseImageFactory.cpp \
  LatitudeImageFactory.cpp \
  LongitudeImageFactory.cpp \
  PhotoImageFactory.cpp \
  MosaicImageFactory.cpp \
  MapCommand.cpp \
  command_line.cpp \
  marc.cpp \
  parse_scan.cpp \
  calc.cpp \
  parse.yy \
  lexer.ll

marc_CXXFLAGS = $(CFITSIO_CFLAGS) $(CODE_COVERAGE_CXXFLAGS)
marc_LDADD    = \
  $(CFITSIO_LIBS) \
  $(ARGP_LIBS) \
  $(top_builddir)/lib/MaRC/libMaRC.la \
  $(CODE_COVERAGE_LIBS)

noinst_HEADERS = \
  ProgressConsole.h \
  ImageFactory.h \
  MuImageFactory.h \
  Mu0ImageFactory.h \
  CosPhaseImageFactory.h \
  LatitudeImageFactory.h \
  LongitudeImageFactory.h \
  PhotoImageFactory.h \
  MosaicImageFactory.h \
  MapCommand.h \
  MapCommand_T.h \
  MapCommand_T.cpp \
  FITS_memory.h \
  FITS_traits.h \
  calc.h \
  command_line.h \
  parse_scan.h \
  lexer.hh

BUILT_SOURCES = parse.hh lexer.hh
lexer.hh: lexer.cc

## Override Automake generated rule.  Remove once it correctly supports
## C++ scanners generated by GNU Flex.  A fix for an incorrect call to
## the C++ operator delete() in a Flex 2.5.4a generated C++ scanner is
## also included.
#.ll.cc:
#	$(LEXCOMPILE) $<
#	sed '/^#/ s|$(LEX_OUTPUT_ROOT)\.cc|$@|' $(LEX_OUTPUT_ROOT).cc >$@
#	rm -f $(LEX_OUTPUT_ROOT).cc
#	sed -e 's/delete yy_state_buf/delete [] yy_state_buf/' $@ > $@.new
#	mv $@.new $@

clean-local: code-coverage-clean
dist-clean-local: code-coverage-dist-clean
